# vishay-reporting

./: .gitignore  .gitmodules  ARCHITECTURE.md  AUTHENTICATION.md  Migrations.txt  README.md  Schema Changes.txt  Snippets.md  Tasks.md  package-lock.json  package.json  reports.sqlite  svelte.config.js  vite.config.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/entity_manual/: Cargo.toml
src-tauri/entity_manual/src/: manual_test_results.rs  mod.rs  prelude.rs  processed_files.rs  settings.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/entity/src/: fg.rs  mod.rs  prelude.rs  report.rs  test.rs  user.rs
src-tauri/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241115_000002_add_test_order.rs  m20251115_150148_events_and_fixes.rs  m20251119_000001_add_test_source_fields.rs  m20251120_000001_add_fg_serialized.rs
src-tauri/migration_event/: Cargo.toml
src-tauri/migration_event/src/: main.rs
src-tauri/migration_manual/: Cargo.toml
src-tauri/migration_manual/src/: m20220101_000001_create_table.rs  main.rs
src-tauri/migration_voltech/: Cargo.toml
src-tauri/migration_voltech/entity_voltech/src/: mod.rs  parse_errors.rs  prelude.rs  processed_files.rs  settings.rs  test_results.rs  watcher_lock.rs
src-tauri/migration_voltech/src/: lib.rs  m20220101_000001_create_table.rs  m20251118_000002_add_errors_and_lock.rs  m20251119_000003_add_relative_path.rs  m20251120_174215_add_normalized_date_to_voltech.rs  main.rs
src-tauri/src/: auth.rs  event.rs  fg.rs  joins.rs  lib.rs  manual.rs  report.rs  sheets.rs  test.rs  test_types.rs  user.rs  voltech.rs
src-tauri/src/manual/: commands.rs  mod.rs  operations.rs  parser.rs  queries.rs
src-tauri/src/reports/: collector.rs  debug.rs  excel.rs  excel_generator.rs  mod.rs  serialized.rs  template.rs  validator.rs
src-tauri/src/voltech/: commands.rs  file_watcher.rs  mod.rs  operations.rs  parser.rs
src-tauri/src/voltech/queries/: mod.rs  (+4 more)
(+85 files in other folders)
