[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Brooklen Ashleigh"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
rust_xlsxwriter = "0.91.0"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-opener = "2"
whoami = "1.6.1"
tauri-plugin-store = "2"
tauri-plugin-clipboard = "2.1.11"
dirs = "5.0"
sea-orm = {  version = "2.0.0-rc.18", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
entity = { path = "entity" }
entity_voltech = { path = "entity_voltech" }
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.6.0"
dotenvy = "0.15"
regex = "1.10"

migration = { path = "migration" }
migration_voltech = { path = "migration_voltech" }
migration_manual = { path = "migration_manual" }
entity_manual = { path = "entity_manual" }
tauri-plugin-dialog = "2"

[workspace]
members = [".", "entity", "entity_voltech", "entity_manual", "migration", "migration_voltech", "migration_manual"]
